@@ -5,8 +5,9 @@
   <body>
     <metal:block metal:fill-slot="main"
       tal:define="
-      directory_supports_password_reminder python:True;
-      directory_supports_password_reset python:True;
+      portal utool/getPortalObject;
+      password_reset_enabled portal/enable_password_reset;
+      password_reminder_enabled portal/enable_password_reminder;
       ">
       <h1 i18n:translate="heading_lost_password">Lost password</h1>
 
@@ -23,7 +24,7 @@
           href="mailto:me@here.com">me@here.com</a>.
       </p>
 
-      <tal:block condition="directory_supports_password_reminder">
+      <tal:block condition="password_reminder_enabled">
         <form action="mail_password"
           tal:attributes="action string:${here/portal_url}/mail_password">
           <dl class="form">
@@ -39,7 +40,7 @@
         </form>
       </tal:block>
 
-      <tal:block condition="directory_supports_password_reset">
+      <tal:block condition="password_reset_enabled">
         <form action="mail_password"
           tal:attributes="action string:${here/portal_url}/account_request_reset_password">
           <dl class="form">
