@@ -9,7 +9,8 @@ New features:
   but the current implementation is currently not good enough anyway)
 Bug fixes:
 ~~~~~~~~~~
--
+- Added in cpsinstall a migration routine for badly stored portal properties
+  such as "enable_portal_joining".
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - cpsinstaller better check of elementtree optional import
